--- a/profile.ini
+++ b/profile.ini
@@ -7,6 +7,7 @@ ruleset=电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=代理规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=直连规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=直连规则,https://raw.githubusercontent.com/9bingyin/Clash-profile/main/lists/direct.list
 ruleset=Cloudflare,https://raw.githubusercontent.com/9bingyin/Clash-profile/main/lists/cloudflare.list
 ruleset=直连规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=直连规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
