--- a/profile.ini
+++ b/profile.ini
@@ -8,9 +8,10 @@ ruleset=苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=代理规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=代理规则,https://raw.githubusercontent.com/9bingyin/Clash-profile/main/lists/proxy.list
 ruleset=Cloudflare,https://raw.githubusercontent.com/9bingyin/Clash-profile/main/lists/cloudflare.list
 ruleset=直连规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=直连规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=直连规则,https://raw.githubusercontent.com/9bingyin/Clash-profile/main/lists/chinacidr.list
 ruleset=直连规则,[]GEOIP,LAN
 ruleset=直连规则,[]GEOIP,CN
 ruleset=默认规则,[]FINAL
