--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,12 +29,29 @@ jobs:
 
     - name: Store the modified file
       run: |
-        mkdir -p list
+        mkdir -p lists
         mv -f chinacidr.list lists/
         mv -f cloudflare.list lists/
         rm -rf chnroutes.txt cfip4.txt cfip6.txt
       shell: bash
+
+    - name: Check file changes
+      id: check_changes
+      uses: actions/github-script@v2
+      with:
+        script: |
+          const compareCommits = await github.repos.compareCommits({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            base: '${{ github.event.before }}',
+            head: '${{ github.sha }}'
+          });
+          const hasChanges = compareCommits.data.files.find(f => f.filename.startsWith('lists/'));
+          console.log(hasChanges);
+          core.setOutput('hasChanges', hasChanges != null);
+
     - name: Commit the changes
+      if: steps.check_changes.outputs.hasChanges == 'true'
       run: |
         git config --global user.name ${{ secrets.USERNAME }}
         git config --global user.email ${{ secrets.EMAIL }}
