--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,15 @@ jobs:
         rm -rf chnroutes.txt cfip4.txt cfip6.txt
       shell: bash
 
+    - name: Check for changes in files
+      id: check_changes
+      run: |
+        git status -s | grep '^[MADRC]' || echo "::set-output name=has_changes::false"
+        echo "::set-output name=has_changes::true"
+      shell: bash
+
     - name: Commit the changes
+      if: steps.check_changes.outputs.has_changes == 'true'
       run: |
         git config --global user.name ${{ secrets.USERNAME }}
         git config --global user.email ${{ secrets.EMAIL }}
