--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,14 +17,18 @@ jobs:
     - name: Download file from url
       run: |
         curl -o chnroutes.txt https://raw.githubusercontent.com/misakaio/chnroutes2/master/chnroutes.txt
+        
         curl -o cfip4.txt https://www.cloudflare.com/ips-v4
         curl -o cfip6.txt https://www.cloudflare.com/ips-v6
 
     - name: Modify the file using sed command
       run: |
-        sed -e '/^#/b' -e 's/^/IP-CIDR,/' -e 's/$/,no-resolve/' chnroutes.txt > chinacidr.list
-        sed -e '/^#/b' -e 's/^/IP-CIDR,/' -e 's/$/,no-resolve/' cfip4.txt > cloudflare.list
-        echo -e '\n' >> cloudflare.list
+        echo "# " | sed "s/$/ $(date)/" > chinacidr.list
+        sed -e '/^#/b' -e 's/^/IP-CIDR,/' -e 's/$/,no-resolve/' chnroutes.txt >> chinacidr.list
+        
+        echo "# " | sed "s/$/ $(date)/" > cloudflare.list
+        sed -e '/^#/b' -e 's/^/IP-CIDR,/' -e 's/$/,no-resolve/' cfip4.txt >> cloudflare.list
+        echo >> cloudflare.list
         sed -e '/^#/b' -e 's/^/IP-CIDR,/' -e 's/$/,no-resolve/' cfip6.txt >> cloudflare.list
 
     - name: Store the modified file
@@ -35,23 +39,12 @@ jobs:
         rm -rf chnroutes.txt cfip4.txt cfip6.txt
       shell: bash
 
-    - name: Check for changes in files
-      id: check_changes
-      run: |
-        if [[ $(git status -s | grep '^[MADRC]') ]]; then
-          echo "::set-output name=has_changes::true"
-        else
-          echo "::set-output name=has_changes::false"
-        fi
-      shell: bash
-
     - name: Commit the changes
-      if: steps.check_changes.outputs.has_changes == 'true'
       run: |
         git config --global user.name ${{ secrets.USERNAME }}
         git config --global user.email ${{ secrets.EMAIL }}
         git add .
-        git commit -m "Adding modified chnroutes.txt file"
+        git commit -m "Auto Update IPLists"
         git push
       env:
         ACTIONS_DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
