--- a/profile.ini
+++ b/profile.ini
@@ -17,7 +17,7 @@ ruleset=直连规则,[]GEOIP,CN
 ruleset=默认规则,[]FINAL
 
 custom_proxy_group=代理规则`select`[]自动选择`[]DIRECT`.*
-custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=自动选择`url-test`.*`http://detectportal.firefox.com/success.txt`300,,50
 custom_proxy_group=国外媒体`select`[]代理规则`[]自动选择`[]直连规则`.*
 custom_proxy_group=电报信息`select`[]代理规则`[]直连规则`.*
 custom_proxy_group=微软服务`select`[]直连规则`[]代理规则`.*
