--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,8 +41,9 @@ jobs:
 
     - name: Commit the changes
       run: |
-        git config --global user.name ${{ secrets.USERNAME }}
-        git config --global user.email ${{ secrets.EMAIL }}
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@users.noreply.github.com'
+        git config --global credential.helper store
         git add .
         git commit -m "Auto Update IPLists"
         git push
