--- a/profile.ini
+++ b/profile.ini
@@ -1,5 +1,6 @@
 [custom]
 
+ruleset=巴哈姆特,https://github.com/ACL4SSR/ACL4SSR/raw/master/Clash/Ruleset/Bahamut.list
 ruleset=直连规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=直连规则,https://raw.githubusercontent.com/9bingyin/routes-info/main/lists/direct.list
 ruleset=直连规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
@@ -13,6 +14,7 @@ ruleset=默认规则,[]FINAL
 
 custom_proxy_group=代理规则`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group=自动选择`url-test`.*`http://detectportal.firefox.com/success.txt`300,,50
+custom_proxy_group=巴哈姆特`select`[]代理规则`[]直连规则`.*
 custom_proxy_group=直连规则`select`[]DIRECT`[]代理规则`[]自动选择
 custom_proxy_group=默认规则`select`[]代理规则`[]直连规则`[]自动选择`.*
 
