--- a/profile.ini
+++ b/profile.ini
@@ -1,6 +1,6 @@
 [custom]
 
-ruleset=巴哈姆特,https://github.com/ACL4SSR/ACL4SSR/raw/master/Clash/Ruleset/Bahamut.list
+ruleset=巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=直连规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=直连规则,https://raw.githubusercontent.com/9bingyin/routes-info/main/lists/direct.list
 ruleset=直连规则,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
