--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,9 @@ jobs:
         curl -o cfip4.txt https://www.cloudflare.com/ips-v4
         curl -o cfip6.txt https://www.cloudflare.com/ips-v6
 
+        curl -o lan-ip.txt https://raw.githubusercontent.com/SukkaW/Surge/master/Source/ip/lan.conf
+        curl -o lan-non_ip.txt https://raw.githubusercontent.com/SukkaW/Surge/master/Source/non_ip/lan.conf
+
     - name: Modify the file using sed command
       run: |
         echo "#" | sed "s/$/ $(date)/" > chinacidr.list
@@ -31,12 +34,18 @@ jobs:
         echo >> cloudflare.list
         sed -e '/^#/b' -e 's/^/IP-CIDR,/' -e 's/$/,no-resolve/' cfip6.txt >> cloudflare.list
 
+        echo "#" | sed "s/$/ $(date)/" > lan.list
+        sed -E '/(IP-CIDR|IP-CIDR6),/ s/$/,no-resolve/' lan-ip.txt >> lan.list
+        echo >> lan.list
+        cat lan-non_ip.txt >> lan.list
+        
     - name: Store the modified file
       run: |
         mkdir -p lists
         mv -f chinacidr.list lists/
         mv -f cloudflare.list lists/
-        rm -rf chnroutes.txt cfip4.txt cfip6.txt
+        mv -f lan.list lists/
+        rm -rf chnroutes.txt cfip4.txt cfip6.txt lan-ip.txt lan-non_ip.txt
       shell: bash
 
     - name: Commit the changes
