--- a/profile.ini
+++ b/profile.ini
@@ -16,7 +16,7 @@ custom_proxy_group=自动选择`url-test`.*`http://cp.cloudflare.com/`300,,50
 custom_proxy_group=巴哈姆特`select`[]代理规则`[]直连规则`.*
 custom_proxy_group=ABEMA`select`[]代理规则`[]直连规则`.*
 custom_proxy_group=直连规则`select`[]DIRECT`[]代理规则`[]自动选择
-custom_proxy_group=默认规则`select`[]代理规则`[]直连规则`[]自动选择`.*
+custom_proxy_group=默认规则`select`[]代理规则`[]DIRECT`[]自动选择
 
 enable_rule_generator=true
 overwrite_original_rules=true
