--- a/profile.ini
+++ b/profile.ini
@@ -13,8 +13,8 @@ ruleset=默认规则,[]FINAL
 
 custom_proxy_group=代理规则`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group=自动选择`url-test`.*`http://cp.cloudflare.com/`300,,50
-custom_proxy_group=巴哈姆特`select`[]代理规则`[]直连规则`.*
-custom_proxy_group=ABEMA`select`[]代理规则`[]直连规则`.*
+custom_proxy_group=巴哈姆特`select`[]代理规则`[]直连规则`(Taiwan)
+custom_proxy_group=ABEMA`select`[]代理规则`[]直连规则`(Japan)
 custom_proxy_group=直连规则`select`[]DIRECT`[]代理规则`[]自动选择
 custom_proxy_group=默认规则`select`[]代理规则`[]DIRECT`[]自动选择
 
