--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         curl -o cfip6.txt https://www.cloudflare.com/ips-v6
 
         curl -o lan-ip.txt https://raw.githubusercontent.com/SukkaW/Surge/master/Source/ip/lan.conf
-        curl -o lan-non_ip.txt https://raw.githubusercontent.com/SukkaW/Surge/master/Source/non_ip/lan.conf
+        # curl -o lan-non_ip.txt https://raw.githubusercontent.com/SukkaW/Surge/master/Source/non_ip/lan.conf
 
         wget https://raw.githubusercontent.com/cokebar/gfwlist2dnsmasq/master/gfwlist2dnsmasq.sh
         wget https://raw.githubusercontent.com/gfwlist/gfwlist/master/gfwlist.txt
@@ -43,7 +43,7 @@ jobs:
         echo "#" | sed "s/$/ $(date)/" > lan.list
         sed -E '/(IP-CIDR|IP-CIDR6),/ s/$/,no-resolve/' lan-ip.txt >> lan.list
         echo >> lan.list
-        cat lan-non_ip.txt >> lan.list
+        # cat lan-non_ip.txt >> lan.list
 
         # GFWlist
         echo "#" | sed "s/$/ $(date)/" > gfw.list
