--- a/profile.ini
+++ b/profile.ini
@@ -2,6 +2,7 @@
 
 ruleset=巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=ABEMA,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AbemaTV.list
+ruleset=广告屏蔽,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
 ruleset=直连规则,https://raw.githubusercontent.com/9bingyin/routes-info/main/lists/lan.list
 ruleset=代理规则,https://raw.githubusercontent.com/9bingyin/routes-info/main/lists/proxy.list
 ruleset=直连规则,https://raw.githubusercontent.com/9bingyin/routes-info/main/lists/direct.list
@@ -15,6 +16,7 @@ custom_proxy_group=代理规则`select`[]自动选择`[]DIRECT`.*
 custom_proxy_group=自动选择`url-test`.*`http://detectportal.firefox.com/success.txt`300,,50
 custom_proxy_group=巴哈姆特`select`[]代理规则`[]直连规则`(Taiwan)
 custom_proxy_group=ABEMA`select`[]代理规则`[]直连规则`(Japan)
+custom_proxy_group=广告屏蔽`select`[]REJECT`[]DIRECT`[]代理规则`[]自动选择
 custom_proxy_group=直连规则`select`[]DIRECT`[]代理规则`[]自动选择
 custom_proxy_group=默认规则`select`[]代理规则`[]DIRECT`[]自动选择
 
